src/objects/BW_Address__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Address_Line_One__c</fullName>
        <label>Address Line One</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_Two__c</fullName>
        <label>Address Line Two</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State Abbreviation</description>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>BW Address</label>
</CustomObject>